<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/friendLLlist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/friendCVlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:padding="10dp">

            <!-- Информация о друге-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/friendImageList"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="3dp"
                appciv_border_color="@android:color/black"
                app:civ_border_width="0.5dp" />

            <TextView
                android:id="@+id/friendUsernameList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/list_friend_username"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_alignTop="@+id/friendImageList"
                android:layout_toRightOf="@+id/friendImageList" />

            <TextView
                android:id="@+id/friendNameList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/friendUsernameList"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/friendImageList"
                android:text="@string/list_friend_name"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/friendBdayListTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/friendNameList"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/friendImageList"
                android:text="@string/list_friend_bday_tv"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/friendBdayList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/friendNameList"
                android:layout_toEndOf="@+id/friendBdayListTV"
                android:text="@string/list_friend_bday_value"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
    <!--android:layout_alignParentBottom="true"-->